--- a/includes/thesis/part01-page3-dedication.tex
+++ b/includes/thesis/part01-page3-dedication.tex
@@ -5,7 +5,7 @@
 	\newline
 
 	\noindent
-	First and foremost, I would like to thank my supervisor \advisor for his invaluable feedback.
+	First and foremost, I would like to thank my supervisor \advisor\space for his invaluable feedback.
 	Furthermore, I wish to thank my partner for her unconditional support and patience as well as my parents for their never ending support for all my ventures in live.
 	Finally, I would like to thank David Kovacs, MA as he did not hesitate to help a complete stranger accomplish writing a thesis in LaTeX.
 
