--- a/includes/thesis/part02-chapter03-methods.tex
+++ b/includes/thesis/part02-chapter03-methods.tex
@@ -17,7 +17,7 @@ An exception was made for material explaining basic concepts that have been deve
 \section{Datasets}\label{s:datasets}
 All nine datasets used in this study were acquired at the competence center for preclinical imaging and biomedical engineering at the University of Applied Sciences, Wiener Neustadt.
 The total body scans were performed on a Molecubes X-Cube \mct\space machine (Molecubes NV X-Cube, MOLECUBES NV, Gent, Belgium).
-The specimens were non contrast enhanced mice however, remnants of contrast agent could be seen in the vesica urinaria of all scanned animals.
+The specimens were non contrast enhanced mice, however, remnants of contrast agent could be seen in the vesica urinaria of all scanned animals.
 All scans were acquired with a tube voltage of 50\acrshort{kv} and a tube current exposure time product of 70\acrshort{mas}.
 Pixel spacing, the distance between the centers of neighboring pixels in the x/y-plane, was consistent across all scans with a distance of $0.1mm$ and the slice thickness was set to 0.1mm resulting in isotropic \glspl{vx}.\\
 A summary of all scan parameters can be seen in \cref{tab:scan-parameters}.
@@ -104,7 +104,7 @@ A common extension for 3D Slicer is SlicerRT, which is designed to enable common
 It includes tools for visualization, quantitative metrics computation, comparison and DICOM import and export \cite{pinterSlicerRTRadiationTherapy2012}.
 Most importantly for this study, it includes a tool for segmentation comparison.
 In this tool, segments can be compared by simply loading two different datasets and choosing the appropriate segments to compare against each other.
-To conclude, it was used for segmentation comparison of the ground truth segmentation and the testers aided and unaided segmentations.
+To conclude, it was used for segmentation comparison of the ground truth segmentation as well a	s the testers aided and unaided segmentations.
 
 \section{Similarity score}\label{s:similarity-score}
 \begin{figure}[h!]
@@ -119,7 +119,8 @@ To conclude, it was used for segmentation comparison of the ground truth segment
 For comparison of the segmentations done by testers with the ground truth segmentation, two well established metric were selected.
 The \acrfull{dc} is a similarity score applicable to a multitude of datasets and has been used as such by numerous studies \cite{setiawanImageSegmentationMetrics2020,atasPerformanceEvaluationJaccardDice2023}.
 However, the \acrshort{dc} is based on segmentation overlap and therefore has no concept of shape.
-\Citeauthor{rayedDeepLearningMedical2024} and \citeauthor{wangImageSegmentationEvaluation2020} recommend the employment and comparison of a second similarity metric, which calculates the surface distance of two segmentations \cite{aspertMESHMeasuringErrors2002,simBrainVentricleDetection2016}.
+\Citeauthor{rayedDeepLearningMedical2024} as well as
+\citeauthor{wangImageSegmentationEvaluation2020} recommend the employment and comparison of a second similarity metric, which calculates the surface distance of two segmentations \cite{aspertMESHMeasuringErrors2002,simBrainVentricleDetection2016}.
 As a result, the \acrfull{hd} was chosen by the author as a second metric.
 Coincidentally, both are readily available in 3D Slicer by a 3rd party extension called SlicerRT \cite{pinterSlicerRTRadiationTherapy2012}.
 Both, the \acrlong{dc} and the \acrlong{hd} are examples of supervised, empirical, indirect and objective evaluation methods (see: \cref{fig:eval}).
@@ -134,11 +135,12 @@ Instead, it is evaluated by calculating criteria that define a good segmentation
 \section{Segmentation}\label{s:segmentation}
 A nearly full skeleton segmentation of the mouse specimens in the dataset was performed by the author.
 Depending on image quality, artifacts, and resolution, on average about 102 individual bones could be segmented in a single specimen.
-The only exception being the ribs, which were segmented pair wise.
+The only exception being the ribs, which were segmented pairwise.
 In other words, instead of creating individual segments for costa 1 left and right, a single segment was created called costae 1.
 As indicated the individual bones were segmented and labeled using their Latin names, as this is common practice in literature and research \cite{harrisonVertebralLandmarksIdentification2013,jeromeSkeletalSystem2018,ruberteMorphologicalMousePhenotyping2017,ruberteBridgingMouseHuman2023}.
 Image resolution limitations were found to impair segmentation accuracy in the wrist and ankle joints and thus, the affected bones were excluded from segmentation.
-As most fully automatic segmentation tools included in 3D Slicer were found to have a high error rate when applied to the dataset in this study, they were disregarded for usage in the ground truth segmentation.
+As most fully automatic segmentation tools included in 3D Slicer were found to have a high error rate when applied to the dataset.
+In this study, they were disregarded for usage in the ground truth segmentation.
 The ground truth segmentation was performed by the author using strictly manual and semi-automatic segmentation tools included in 3D Slicer.
 Extensive usage of anatomy atlases and anatomy browsers were performed during the segmentation \cite{jeromeSkeletalSystem2018,harrisonVertebralLandmarksIdentification2013,platzerTaschenatlasAnatomieBd2013,ruberteMorphologicalMousePhenotyping2017,ruberteBridgingMouseHuman2023,rautenkranzSectionalanatomy2018}.
 To ensure consistent segmentation quality, a strict order of operations was devised.
@@ -167,7 +169,7 @@ To compensate for small inconsistencies in the threshold operation, a closing op
 3D Slicer does not include a closing operation tool, thus the task was
 accomplished by using 3D Slicers \textit{Margin grow} and \textit{Margin shrink} tools in sequence.
 The same steps were performed to a background mask.
-For the actual segmentation step, the mouse anatomy was divided into the general body parts head, trunk, and extremities.
+For the actual segmentation step, the mouse anatomy was divided into the general body parts, such as head, trunk, and extremities.
 Which in turn were divided into the individual bones that compose them.
 Separation of the individual bones was done manually via paint operations in 2D and 3D.
 Whereas segmentation of larger bone volume was performed using semi-automatic tools like 3D Slicers \textit{Islands} tool.
@@ -275,7 +277,8 @@ The following black and white pictograms were drawn by the author himself and we
 	\end{centering}
 	\caption{\Cref{fig:performance_icon} informs the reader about a potential resource intensive operation and \cref{fig:plugin_icon} indicates that some tool may only be available after installing a 3rd party add-on.}
 \end{figure}
-\par\medskip
+\pagebreak
+
 \noindent
 3D Slicer displays the loaded dataset in 2D slice views by default.
 The user has the option to visualize the dataset in 3D via 3D Slicer's volume rendering capabilities.
@@ -285,32 +288,32 @@ A smaller part of 3D Slicer segmentation tools can be used in 3D view and were t
 The 3D symbol, which when compared to the 2D symbol, is displayed with a \acrfull{dof} effect, giving it a 3-dimensional appearance.
 This is intended to draw the reader's attention to 3D Slicers 3D rendering view.
 In order to draw the readers' attention to a specific recommendation on how to use a tool, \cref{fig:hint_icon} was utilized.
-The hint symbol can be described as a simple glowing lightbulb, intended to suggest to readers that it symbolizes an idea to consider.
+The hint symbol can be described as a simple glowing light bulb, intended to suggest that it symbolizes an idea to consider.
 It was always inserted into the guide with a small section of text explaining to the user how to ideally utilize the current tool.
-3D Slicer allows for many operations to be undone, some operations, however, cannot be undone.
+3D Slicer allows for many operations to be undone, some operations, however, have a permanent effect.
 In most cases, this is because the original data has been overwritten by the user's last operation.
 Unfortunately, 3D Slicer does not explicitly inform the user which operations potentially overwrite source data and are therefore impossible to undo.
 In the guide, \cref{fig:noundo_icon} was used to inform the reader about such issues.
 This irreversible symbol displays a counterclockwise circular arrow that is disrupted by a thunderbolt, which extends from the top right to the bottom left of the symbol.
-The counterclockwise circular arrow is intended to convey to the reader the idea of undoing something by ``turning back time'' and the thunderbolt interrupts or blocks this action and thus give the reader the idea that something cannot be undone.
+The counterclockwise circular arrow is intended to convey the idea of undoing something by ``turning back time'' and the thunderbolt interrupts or blocks this action and thus give the reader the idea that something cannot be undone.
 A similar problem occurs when using segmentation tools that are computationally expensive.
-These are tools which may work fine for most users on small datasets and lead the user to believe they will work to the same extent on larger datasets.
+These are tools which may work fine for most users on small datasets and lead the operator to believe they will work to the same extent on larger datasets.
 However, loading and segmenting large datasets with some tools, especially semi-automatic segmentation tools, will lead to crashes due to 3D Slicer running out of \acrfull{ram}.
 Thus, segmentation tools which may be computationally expensive were marked with \cref{fig:performance_icon} paired with a short explanation in the guide.
 The performance symbol displays a \acrfull{cpu} which is intended to remind the reader that they are using a computer that has limited computational capabilities.
-Some segmentation tools used in the guide are only available to users after installing a third party plugin for 3D Slicer, wherever this is the case, readers were informed by an instance of \cref{fig:plugin_icon}.
+Some segmentation tools referenced in the guide are only available to users after installing a third party plugin for 3D Slicer, wherever this is the case, readers were informed by an instance of \cref{fig:plugin_icon}.
 The plugin symbol displays a puzzle piece and is meant to convey the idea that some functionality must be intentionally added to 3D Slicer.
 
 \section{Research Design}\label{s:researchDesign}
 For this study datasets of nine mice, scanned via \mct\space were taken (see: \cref{s:datasets}).
 The author performed bone anatomy segmentation on these datasets via manual and semi-automatic tools usable in the software called 3D Slicer (see: \cref{s:segmentation}).
-Then a guide was created by the author (see: \cref{s:guide_comp}).
+Then a guide was created by the author of this thesis (see: \cref{s:guide_comp}).
 This guide would be sent out to testers in conjunction with a reduced dataset containing only six bone structures making up both shoulder joints (see: \cref{s:mm-dataset-preparation}).
-The testers were instructed to segment the anatomy of the left shoulder joint before reading the guide.
+The participants were instructed to segment the anatomy of the left shoulder joint before reading the guide.
 This was done to get a baseline value of their segmentation skills.
 After completing segmentation of the left shoulder joint, the testers were instructed to read through the guide and finally,
 with the help of the guide, segment the right shoulder joint.
-The testers then saved their work in a \acrfull{mrb} file and sent it back to the author.
+The participant then saved their work in a \acrfull{mrb} file and sent it back to the author.
 Segmentation analysis was performed by loading the segmented dataset of a tester and the reference segmentation dataset into 3D Slicer.
 And computing both \acrlong{dc} and \acrlong{hd} via the 3D Slicer extension \textit{SlicerRT}.
 All this was performed on a custom-built computer from 2019,
